# serato-crates-sync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  sync.sh
.github/workflows/: test.yml
docs/: internals.md  serato4-crate-engine-plan.md  troubleshooting.md  usage.md
src/serato_crates_sync/: __init__.py  cli.py  diagnose.py  fix_paths.py  library.py  serato_db.py  sync.py  verify_paths.py
tests/: __init__.py  _schemas.py  test_cli_smoke.py  test_diagnose.py  test_fix_paths.py  test_public_api.py  test_serato_db.py  test_sync.py  test_verify_paths.py
