[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serato-crates-sync"
version = "0.3.0"
description = "Generate Serato DJ Pro crates, audit library health, and repair broken asset paths"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Serato Crates Sync Contributors"}
]
keywords = ["serato", "dj", "crates", "music", "cli", "library", "audit", "repair"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "serato-crate>=0.0.1,<1.0",
    "typing_extensions>=4.0.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
serato-crates = "serato_crates_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Pragmatic baseline. E (pycodestyle) catches obvious issues, F (pyflakes)
# unused imports / undefined names, B (bugbear) common bug patterns,
# UP (pyupgrade) modernisation hints, I (isort) import ordering.
select = ["E", "F", "B", "UP", "I"]
# E501 line-too-long: handled loosely; we have a few long error strings.
# B008 function-call-in-default: argparse uses Path() in defaults.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # module-level imports not at top of file (test fixtures)

